// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render correctly 1`] = `
<Liststyle__ListContainer
  id="1"
>
  <ul
    className="wrapper-item-container"
  >
    <Liststyle__ListItemContainer
      key="0"
    >
      <Component
        droppableId="1"
      />
    </Liststyle__ListItemContainer>
  </ul>
</Liststyle__ListContainer>
`;

exports[`<List /> should render correctly with position 1`] = `
<Liststyle__ListContainer
  hasPositionDisplayed={true}
  id="1"
>
  <Title
    type="h3"
  >
    <FormattedMessage
      id="Test"
      values={Object {}}
    />
  </Title>
  <ul
    className="wrapper-item-container"
  >
    <Liststyle__ListItemContainer
      key="0"
    >
      <Component
        droppableId="1"
        isCombineEnabled={false}
        isCombineOnly={false}
      />
    </Liststyle__ListItemContainer>
  </ul>
</Liststyle__ListContainer>
`;
